--- a/frontend/chess-data/src/components/SearchBar.css
+++ b/frontend/chess-data/src/components/SearchBar.css
@@ -1,18 +1,15 @@
-/* Contenitore della sezione di ricerca */
 .search-section {
   text-align: center;
   margin-top: 50px;
 }
 
-/* Titolo principale */
 .search-title {
-  font-size: 40px;
+  font-size: 100px;
   font-weight: bold;
   color: white;
   margin-bottom: 20px;
 }
 
-/* Contenitore della barra di ricerca */
 .search-container {
   display: flex;
   justify-content: center;
@@ -20,20 +17,18 @@
   padding: 20px;
 }
 
-/* Barra di ricerca */
 .search-bar {
-  background: #303030;  /* Grigio scuro */
+  background: #303030;
   border: 2px solid red;
   border-radius: 30px;
   padding: 12px 15px;
-  width: 400px;
+  width: 600px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
 }
 
-/* Input della barra di ricerca */
 #search-bar-input {
   border: none;
   background: transparent;
@@ -43,7 +38,6 @@
   font-size: 16px;
 }
 
-/* Pulsante di ricerca */
 .vs-button {
   background: red;
   border: none;
