--- a/frontend/chess-data/src/components/Header.css
+++ b/frontend/chess-data/src/components/Header.css
@@ -52,6 +52,7 @@
   font-size: 18px;
 }
 
+
 .header {
   display: flex;
   align-items: center;
@@ -59,6 +60,9 @@
   padding: 10px 20px;
   background-color: #181818;
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
 .header-right {
