--- a/frontend/src/components/UserStats/PlayerHistory.css
+++ b/frontend/src/components/UserStats/PlayerHistory.css
@@ -1,7 +1,19 @@
 .chart-container-graph {
-    width: 100%;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.date-range-buttons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.date-button {
+  padding: 8px 16px;
+}
