--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,27 @@ body {
 
 .content {
   flex: 1; 
-  /* se vuoi più spazio fisso alla fine: */
   padding-bottom: 40px; 
 }
 
+/* shared-styles.css */
+.interactive-button {
+  background: #2a2a2a;
+  color: white;
+  border: 1px solid white;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background 0.3s;
+  text-align: center;
+}
+
+.interactive-button.active {
+  background: gray;
+  font-weight: bold;
+}
+
+.interactive-button:hover {
+  background-color: #2C2C2C;
+  color: white;
+}
