--- a/frontend/src/pages/UserStats.css
+++ b/frontend/src/pages/UserStats.css
@@ -3,19 +3,6 @@
   margin: 0 auto;
 }
 
-.user-card {
-  background: #222;
-  margin-bottom: 16px;
-  padding: 20px;
-  border: 1px solid white;
-  border-radius: 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  transition: none;
-  cursor: default;
-}
-
 .profile-top {
   display: flex;
   align-items: flex-start;
@@ -37,13 +24,13 @@
 
 .user-username {
   font-size: 1rem;
-  color: #aaa;
+  color: var(--text-color-username);
 }
 
 .user-category {
   margin-top: 5px;
   padding: 2px 6px;
-  background: #722929;
+  background: var(--bq-color-title);
   color: white;
   border-radius: 6px;
   font-size: 0.9rem;
@@ -63,8 +50,6 @@
   padding: 14px;
   flex: 1;
 }
-
-
 
 .stat-card {
   background: #222;
@@ -131,12 +116,4 @@
 .chart-column {
   display: flex;
   height: 100%;
-}
-
-.player-history {
-  text-align: center;
-  background: #222;
-  padding: 15px;
-  border-radius: 12px;
-  border: 1px solid white;
 }
